fixing 2 display bugs on android <= 4.3 * in trek list, fixed size for the icons so they do not get off screen * remove animation-fill-mode in ionic.css so the popup does not disappear

--- a/app/styles/_icons.scss
+++ b/app/styles/_icons.scss
@@ -4,7 +4,7 @@
     vertical-align: middle;
     text-decoration: none;
 
-    &.icon-binoculars:before {
+    &.icon-binoculars::before {
         content: "b";
     }
 }
