--- a/app/styles/_trek-detail.scss
+++ b/app/styles/_trek-detail.scss
@@ -49,6 +49,7 @@
 
 .trek-detail__main-infos__item:before {
 	width: 30px;
+	height: 30px;
 	position: absolute;
 	top: 5px;
 	left: 5px;	
