--- a/app/styles/_trek-list.scss
+++ b/app/styles/_trek-list.scss
@@ -19,6 +19,7 @@
     position: absolute;
     right: 5px;
     bottom: 10px;
+    width: 88px;
 }
 
 .trek-list__item__detail-bt {
